fixtures/name-resolution/negative/unsupported_header_only_cpp_import.cos
/// diag(error, 2:1): cosmo1.name.unsupported-cpp-header-import
import "c++/vector"
